[gd_scene load_steps=70 format=3 uid="uid://dlbdo0juf0pvs"]

[ext_resource type="Script" uid="uid://dn0jaidwus2gx" path="res://Player/player.gd" id="1_4ntmi"]
[ext_resource type="Texture2D" uid="uid://brevab53lt70i" path="res://Assets/character/_Idle.png" id="1_l8h54"]
[ext_resource type="Texture2D" uid="uid://bu0g47exncqcd" path="res://Assets/character/_AttackNoMovement.png" id="2_apopc"]
[ext_resource type="Texture2D" uid="uid://b3x00t0c68cjb" path="res://Assets/character/_Fall.png" id="2_x3vf3"]
[ext_resource type="Texture2D" uid="uid://cstfu5wa08yc5" path="res://Assets/character/_Attack2NoMovement.png" id="3_5htga"]
[ext_resource type="Texture2D" uid="uid://bjeh633w1dfti" path="res://Assets/character/_Jump.png" id="3_k53q1"]
[ext_resource type="Texture2D" uid="uid://ycva08lohvhv" path="res://Assets/character/_Run.png" id="4_fhl08"]
[ext_resource type="Texture2D" uid="uid://bkv2bw4hv60kc" path="res://Assets/character/_JumpFallInbetween.png" id="5_apopc"]
[ext_resource type="Script" uid="uid://bci57mj44hm6k" path="res://StateSystem.gd" id="5_vtle1"]
[ext_resource type="Texture2D" uid="uid://df8hdh564wpwa" path="res://Assets/character/_WallClimbNoMovement.png" id="8_p5o4e"]
[ext_resource type="Texture2D" uid="uid://bf87bqoq1nrg2" path="res://Assets/character/_WallSlide.png" id="9_gu6f8"]
[ext_resource type="Script" uid="uid://jc2u7rl0oo75" path="res://Classes/Hitbox.gd" id="11_5htga"]
[ext_resource type="Script" uid="uid://ikyvo503wanu" path="res://Classes/Hurtbox.gd" id="12_p5o4e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_755ss"]
atlas = ExtResource("2_apopc")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbimk"]
atlas = ExtResource("2_apopc")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0h3t"]
atlas = ExtResource("2_apopc")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie76m"]
atlas = ExtResource("2_apopc")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy65m"]
atlas = ExtResource("3_5htga")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_maysp"]
atlas = ExtResource("3_5htga")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l10g"]
atlas = ExtResource("3_5htga")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rl0i"]
atlas = ExtResource("3_5htga")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x5p2"]
atlas = ExtResource("3_5htga")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eb1q"]
atlas = ExtResource("3_5htga")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qemgg"]
atlas = ExtResource("2_x3vf3")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8viyr"]
atlas = ExtResource("2_x3vf3")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0op"]
atlas = ExtResource("2_x3vf3")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ntmi"]
atlas = ExtResource("1_l8h54")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_btcbx"]
atlas = ExtResource("1_l8h54")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwnis"]
atlas = ExtResource("1_l8h54")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k53q1"]
atlas = ExtResource("1_l8h54")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhl08"]
atlas = ExtResource("1_l8h54")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtle1"]
atlas = ExtResource("1_l8h54")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_od3ui"]
atlas = ExtResource("1_l8h54")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_00tjw"]
atlas = ExtResource("1_l8h54")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("1_l8h54")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("1_l8h54")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("3_k53q1")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("3_k53q1")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = ExtResource("3_k53q1")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_76lrf"]
atlas = ExtResource("5_apopc")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_efx54"]
atlas = ExtResource("5_apopc")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = ExtResource("4_fhl08")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmf2"]
atlas = ExtResource("4_fhl08")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = ExtResource("4_fhl08")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ygp"]
atlas = ExtResource("4_fhl08")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o28un"]
atlas = ExtResource("4_fhl08")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_n471f"]
atlas = ExtResource("4_fhl08")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emwf"]
atlas = ExtResource("4_fhl08")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hshwv"]
atlas = ExtResource("4_fhl08")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjlu"]
atlas = ExtResource("4_fhl08")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwp6"]
atlas = ExtResource("4_fhl08")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4o1l"]
atlas = ExtResource("8_p5o4e")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2n6q"]
atlas = ExtResource("8_p5o4e")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6x0f"]
atlas = ExtResource("8_p5o4e")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp1hh"]
atlas = ExtResource("8_p5o4e")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs4pp"]
atlas = ExtResource("8_p5o4e")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyprq"]
atlas = ExtResource("8_p5o4e")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4lon"]
atlas = ExtResource("8_p5o4e")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ynux"]
atlas = ExtResource("9_gu6f8")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d30e8"]
atlas = ExtResource("9_gu6f8")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pogt"]
atlas = ExtResource("9_gu6f8")
region = Rect2(240, 0, 120, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_5htga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_755ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbimk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0h3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie76m")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy65m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maysp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l10g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rl0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x5p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eb1q")
}],
"loop": false,
"name": &"attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qemgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8viyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0op")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ntmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btcbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwnis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k53q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhl08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtle1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od3ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00tjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3vf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76lrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efx54")
}],
"loop": false,
"name": &"jump_fall_inbet_ween",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ygp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o28un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n471f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hshwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpjlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwp6")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4o1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2n6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6x0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp1hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs4pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyprq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4lon")
}],
"loop": true,
"name": &"wall_climb",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ynux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d30e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pogt")
}],
"loop": true,
"name": &"wall_slide",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_apopc"]
size = Vector2(42, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gu6f8"]
size = Vector2(14, 36)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p5o4e"]
radius = 7.0
height = 36.0

[sub_resource type="Animation" id="Animation_1kmt7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Character/Hitbox/CollisionAttack1:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Character/Hitbox/CollisionAttack2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wvbyc"]
resource_name = "attack1"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Character/Hitbox/CollisionAttack1:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.100045, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_gvnt1"]
resource_name = "attack2"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0480536, 0.123042, 0.223042, 0.323042, 0.423042),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Character/Hitbox/CollisionAttack2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.123042, 0.423042),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4i3b"]
_data = {
&"RESET": SubResource("Animation_1kmt7"),
&"attack1": SubResource("Animation_wvbyc"),
&"attack2": SubResource("Animation_gvnt1")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_4ntmi")

[node name="Character" type="Marker2D" parent="."]
position = Vector2(-5, 22)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Character"]
position = Vector2(5, -22)
sprite_frames = SubResource("SpriteFrames_5htga")
animation = &"attack1"

[node name="WallRaycast" type="RayCast2D" parent="Character"]
position = Vector2(3, -14)
target_position = Vector2(7, 0)

[node name="BackWallRaycast" type="RayCast2D" parent="Character"]
position = Vector2(-1, -14)
target_position = Vector2(-9, 0)

[node name="Hitbox" type="Area2D" parent="Character"]
collision_layer = 0
collision_mask = 4
script = ExtResource("11_5htga")
metadata/_custom_type_script = "uid://jc2u7rl0oo75"

[node name="CollisionAttack1" type="CollisionShape2D" parent="Character/Hitbox"]
position = Vector2(29, -3.5)
shape = SubResource("RectangleShape2D_apopc")
disabled = true

[node name="CollisionAttack2" type="CollisionPolygon2D" parent="Character/Hitbox"]
position = Vector2(-38, 17)
polygon = PackedVector2Array(13, -1, 43, -39, 88, -32, 88, -13, 67, -1)
disabled = true

[node name="Hurtbox" type="Area2D" parent="Character"]
collision_layer = 2
collision_mask = 0
script = ExtResource("12_p5o4e")
metadata/_custom_type_script = "uid://ikyvo503wanu"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Hurtbox"]
shape = SubResource("RectangleShape2D_gu6f8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 22)
shape = SubResource("CapsuleShape2D_p5o4e")

[node name="StateStstem" type="Node2D" parent="."]
position = Vector2(-5, 22)
script = ExtResource("5_vtle1")
metadata/_custom_type_script = "uid://bci57mj44hm6k"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c4i3b")
}

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
